updating image responsiveness in licences page

--- a/licenses.html
+++ b/licenses.html
@@ -16,6 +16,13 @@
 				margin-top: 4rem;
 				color: indianred;
 			}
+
+			img {
+				width: 100%;
+				height: auto;
+				min-width: 400px;
+				max-width: 800px;
+			}
 		</style>
 	</head>
 	<body class="no-sidebar is-preload">
@@ -75,15 +82,17 @@
 				<h2 style="margin-top: 0em;">Zambia Revenue Authority</h2>
 				<div class="container">
 					<div class="row justify-content-around">
+
 						<div class="col-lg"><img src="images/tax1.png" alt="tax1"></div>
 						<div class="col-lg"><img src="images/tax2.png" alt="tax2"></div>
 					</div>
+					
 				</div>
 
 				<h2>Workmen's compensation</h2>
-				<div class="container">
-					<div style="text-align: center;">
-						<div><img src="images/workmen.png" alt="workmen-compensation"></div>
+				<div>
+					<div class="container" style="text-align: center;"><div>
+							<img src="images/workmen.png" alt="workmen-compensation"></div>
 					</div>
 				</div>
 					
