added img responsiveness to technical page

--- a/technicals.html
+++ b/technicals.html
@@ -18,6 +18,12 @@
 			.center {
 				text-align: center;
 			}
+			img {
+				width: 100%;
+				height: auto;
+				min-width: 350px;
+				max-width: 800px;
+			}
 		</style>
 	</head>
 	<body class="no-sidebar is-preload">
