removed the word installation from carousel to correct alignment on mobile

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 						<article>
 							<a href="#" class="image featured"><img src="images/pic07.png" alt="" /></a>
 							<header>
-								<h3><a href="#">Pump chamber installation</a></h3>
+								<h3><a href="#">Pump chamber</a></h3>
 							</header>
 							<!-- <p>Commodo id natoque malesuada sollicitudin elit suscipit magna.</p> -->
 						</article>
