index page <body class: homepage to no-sidebar

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			}
 		</style>
 	</head>
-	<body class="homepage is-preload">
+	<body class="no-sidebar is-preload">
 		<div id="page-wrapper">
 
 			<!-- Header -->
