added flag to services page..put new gear pic in services page

--- a/services.html
+++ b/services.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<link rel="shortcut icon" href="images/zambiaflag.png" type="image/x-icon">
 		<link href="https://fonts.googleapis.com/css2?family=Crimson+Text:wght@600&display=swap" rel="stylesheet">
 		<style>
 			h3 {
@@ -167,7 +168,7 @@
 											Our services to you.
 										</p>
 									</header>
-									<a href="#" class="image featured"><img src="images/header1.png" alt="" /></a>
+									<a href="#" class="image"><img src="images/header2.png" alt="" /></a>
 									<p>
 										Indus mining Zambia Ltd is a supplier of electrical switchgear, instrumentation, conveyor belt and fittings, gear boxes, electric motors, industrial cables, valves of different types, mineral processing chemicals and related products to the mining and commercial industry in Zambia and with interest to extend our wings to other African countries like Democratic Republic of Congo.
 										A variety of products can be supplied to suit the customer's needs. 
