--- a/services.html
+++ b/services.html
@@ -214,7 +214,7 @@
 						<hr />
 						<div class="row">
 							<article class="col-4 col-12-mobile special">
-								<a href="#" class="image featured"><img src="images/pic05.png" alt="" /></a>
+								<a href="#" class="image featured"><img src="images/welding.jpg" alt="" /></a>
 								<header>
 									<h3><a href="#">Steel Fabrication and Engineering</a></h3>
 								</header>
